--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
 		<link rel="canonical" href="https://calebjolliffe.co">
 		<link rel="icon" href="https://calebjolliffe.co/assets/images/clbrrn.svg" type="image/svg+xml">
-		<link rel="stylesheet" href="https://calebjolliffe.co/assets/style.css" type="text/css">
+		<link rel="stylesheet" href="https://beta.calebjolliffe.co/assets/style.css" type="text/css">
 		<link rel="alternate" href="https://calebjolliffe.co/assets/feed.xml" type="application/atom+rss" title="Caleb Jolliffe">
 		<link rel="alternate" href="https://calebjolliffe.co/assets/feed.json" type="application/feed+json" title="Caleb Jolliffe">
 
