--- a/assets/style.css
+++ b/assets/style.css
@@ -9,10 +9,13 @@
 	color:#E7E7D9;
 	font-family:'TT Interphases Pro', --apple-system, BlinkMacSystemFont, system-ui, "Inter", Helvetica, sans-serif;
 	font-size:14px;
+	font-weight:regular;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	font-size:1.5em;
+	font-weight:regular;
+	font-style:normal;
 }
 
 a {
