--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@
 	font-family:'TT Interphases Pro', --apple-system, BlinkMacSystemFont, system-ui, "Inter", Helvetica, sans-serif;
 	font-size:14px;
 	font-weight:regular;
+	line-height:1.3em;
 }
 
 h1, h2, h3, h4, h5, h6 {
