--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,4 @@
-@font-face {
-	font-family:'IBM Plex Mono';
-	font-style:normal;
-	src:url(/assets/fonts/plex.woff2) format(woff2);
-}
-
 :root {
-	font-family:'IBM Plex Mono';
+	font-family:Menlo;
 	font-size:14px;
 }
