--- a/assets/style.css
+++ b/assets/style.css
@@ -19,3 +19,12 @@
 h1, h2, h3, h4, h5, h6, b {
 	font-family:'Berkeley Mono Bold';
 }
+
+a, a:active, a:visited {
+	text-decoration:none;
+	color:inherit;
+}
+
+a:hover {
+	opacity:60%;
+}
