--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
 
 		<a href="https://beta.calebjolliffe.co">Caleb Jolliffe</a>
 
+		<p>An independent designer. I value simplicity, functionality, and<br>drawing on midcentury computing to build ridiculously simple,<br>low-carbon workflows that save immense amounts of time.</p>
+
 		{{ content }}
 
 	</body>
