Test updated header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,8 @@
 
 	<body>
 
-		<a href="https://beta.calebjolliffe.co">Caleb Jolliffe</a>
+		<span style="text-align:left;"><a href="https://beta.calebjolliffe.co">Caleb Jolliffe</a></span>
+		<span style="text-align:right;"><a href="https://digitalbeacon.co/report/calebjolliffe-co">CO2: 0.000g</a></span>
 
 		<p>An independent designer. I value simplicity, functionality, and<br>drawing on midcentury computing to build ridiculously simple,<br>low-carbon workflows that save immense amounts of time.</p>
 
