--- a/assets/style.css
+++ b/assets/style.css
@@ -1,23 +1,20 @@
 @font-face {
-	font-family:'Berkeley Mono Bold';
-	src:url('/assets/fonts/bm-bold.woff2') format('woff2');
-}
-
-@font-face {
-	font-family:'Berkeley Mono Regular';
+	font-family:'Berkeley Mono';
 	src:url('/assets/fonts/bm-regular.woff2') format('woff2');
 }
 
 :root {
 	background-color:#F9F9F9;
 	color:#333333;
-	font-family:'Berkeley Mono Regular';
-	font-size:12px;
-	line-height:120%;
+	font-family:'Berkeley Mono';
+	font-size:12.5px;
+	line-height:130%;
+	margin:2%;
 }
 
-h1, h2, h3, h4, h5, h6, b {
-	font-family:'Berkeley Mono Bold';
+h1, h2, h3, h4, h5, h6, p, b, small {
+	font-size:12.5px;
+	font-weight:normal;
 }
 
 a, a:active, a:visited {
@@ -27,4 +24,16 @@ a, a:active, a:visited {
 
 a:hover {
 	opacity:60%;
+}
+
+.list {
+	line-height:160%;
+}
+
+.section {
+	margin-top:4%;
+}
+
+.bottom {
+	margin-top:16%;
 }
