--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
 			<r-cell span=2+1>
 
-				<r-grid columns=2">
+				<r-grid columns=2>
 
 					<r-cell span=1>
 						<a href="https://calebjolliffe.co">Caleb Jolliffe</a>
