Updating list item

--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,15 @@ a:hover {
 	opacity:60%;
 }
 
+ul {
+	margin-left:0;
+	padding-left:0;
+}
+
+li {
+	list-style-type:none;
+}
+
 .list {
 	line-height:160%;
 }
