--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@
 	font-family:'Berkeley Mono';
 	font-size:12.5px;
 	line-height:130%;
-	margin:2%;
+	margin:2% 0 2% 0;
 }
 
 h1, h2, h3, h4, h5, h6, p, b, small {
@@ -40,9 +40,9 @@ li {
 }
 
 .section {
-	margin-top:4%;
+	margin-top:8%;
 }
 
 .bottom {
-	margin-top:16%;
+	margin-top:32%;
 }
