--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,12 @@
 layout: default
 ---
 
-<div>
+<r-cell span=2+1>
+	<h2>{{ post.title }}<hr></h2>
+</r-cell>
+
+<r-cell span=2+1>
 
 	{{ content }}
 
-</div>
+</r-cell>
