Updating test post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,4 +2,10 @@
 layout: default
 ---
 
-{{ content }}
+<r-cell span=2+1 class="section">
+    <h2>{{ post.title }}<hr></h2>
+</r-cell>
+
+<r-cell span=2+1>
+    {{ content }}
+</r-cell>
