--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <r-cell span=2+1 class="section">
-    <h2>{{ title }}<hr></h2>
+    <h2>{{ page.title }}<hr></h2>
 </r-cell>
 
 <r-cell span=2+1>
