--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,11 @@ layout: default
 ---
 
 <r-cell span=2+1 class="section">
-    <h2>{{ page.title }}<hr></h2>
+    <h2>
+        <span>{{ page.title }}</span>
+        <span style="float:right;">{{ page.read }} minute read</span>
+        <hr>
+    </h2>
 </r-cell>
 
 <r-cell span=2+1>
