--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,12 @@ a:hover {
 	opacity:60%;
 }
 
+blockquote {
+	margin-left:0;
+	padding-left:0;
+	border-left:2.5px solid #ECECEC;
+}
+
 ul {
 	margin-left:0;
 	padding-left:0;
