--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ a:hover {
 	opacity:60%;
 }
 
-blockquote p {
+blockquote p, ul {
 	margin-left:0;
 	padding-left:0;
 	border-left:2.5px solid #ECECEC;
