--- a/assets/style.css
+++ b/assets/style.css
@@ -28,8 +28,7 @@ a:hover {
 
 blockquote p, ul {
 	margin-left:0;
-	padding-left:0;
-	border-left:2.5px solid #ECECEC;
+	border-left:1px solid #333333;
 }
 
 ul {
