Update footer margins

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
 
 				{{ content }}
 
-				<r-cell span=2+1 class="bottom">
+				<r-cell span=2+1 class="bottom" style="margin-bottom:8%;">
 					<hr>
 					<a href="">RSS</a>&nbsp;&nbsp;<a href="mailto:calebjolliffe@proton.me">Mail</a>&nbsp;&nbsp;<a href="https://x.com/calebjolliffe">X</a>
 				</r-cell>
