--- a/assets/style.css
+++ b/assets/style.css
@@ -51,8 +51,12 @@ li {
 
 .section {
 	margin-top:4%;
+	padding-top:4%
 }
 
 .bottom {
-	margin-top:4%;
+	margin-top:8%;
+	padding-top:8%;
+	margin-bottom:8%;
+	padding-bottom:8%;
 }
