--- a/assets/style.css
+++ b/assets/style.css
@@ -31,8 +31,8 @@ a:hover {
 }
 
 blockquote {
-	margin-left:0;
-	padding:0.5% 0 0.5% 2%;
+	margin-left:2%;
+	padding:0 0 0 2%;
 	border-left:1px solid #333333;
 }
 
