--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,19 @@
 layout: default
 ---
 
-<r-cell span=2+1 class="section">
-    <h2>
-        <span>{{ page.title }}</span>
-        <span style="float:right;">{{ page.read }} minute read</span>
-        <hr>
-    </h2>
-</r-cell>
-
-<r-cell span=2+1>
+<div id="post">
     {{ content }}
-</r-cell>
+</div>
+
+<div id="related">
+  <h2>Related Posts</h2>
+  <ul class="posts">
+    {% for post in site.related_posts limit:3 %}
+    <li>
+        <span>{{ post.date | date_to_string }}</span>
+        &bull;
+        <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
