--- a/assets/style.css
+++ b/assets/style.css
@@ -1,75 +1,168 @@
 @font-face {
 	font-family:'Berkeley Mono';
-	src:url('/assets/fonts/bm-regular.woff2') format('woff2');
+    font-weight:normal;
+	src:url('/fonts/bm-regular.woff2') format('woff2');
 }
 
-:root {
-	background-color:#F9F9F9;
-	color:#333333;
-	font-family:'Berkeley Mono';
-	font-size:12.5px;
-	line-height:130%;
-	margin:2% 0 2% 0;
+@font-face {
+    font-family:'Berkeley Mono';
+    font-weight:bold;
+    src:url('/fonts/bm-bold.woff2') format('woff2');
 }
 
-h1, h2, h3, h4, h5, h6, p, b, small {
-	font-size:12.5px;
-	font-weight:normal;
+/* Globals */
+* {
+    margin:0;
+    padding:0;
 }
 
-h3 {
-	text-decoration:underline;
+html, body {
+    height:100%;
+}
+
+body {
+    background-color:#F9F9F9;
+    color:#333333;
+    font-family:'Berkeley Mono', Menlo, Monaco, monospace;
+    font-size:13.34px;
+    *font-size:small;
+    text-align:center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-size:100%;
+}
+
+h1 {
+    margin-bottom:1em;
 }
 
 p {
-	margin:2% 0 2% 0;
+    margin:1em 0;
 }
 
-a, a:active, a:visited {
-	text-decoration:none;
-	color:inherit;
+a {
+    color:#999999;
+    text-decoration:none;
 }
 
 a:hover {
-	opacity:60%;
+    opacity:60%;
 }
 
-r-cell {
-	margin-bottom:2%;
-	padding-bottom:2%;
+a:visited {
+    color:#333333;
 }
 
-blockquote {
-	margin-left:2%;
-	padding:0 0 0 2%;
-	border-left:1px solid #333333;
+table {
+    font-size:inherit;
+    font:100%;
 }
 
-hr {
-	border-top:1px solid #333333;
+
+/* Index */
+ul.posts {
+    list-style-type:none;
+    margin-bottom:2em;
 }
 
-ul {
-	margin-left:0;
-	padding-left:0;
+    ul.posts li {
+        line-height:1.75em;
+    }
+
+    ul.posts span {
+        color:#999999;
+        font-size:80%;
+    }
+
+
+/* Main */
+.site {
+    font-size:110%;
+    text-align:justify;
+    width:40em;
+    margin:3em auto 2em auto;
+    line-height:1.5em;
 }
 
-li {
-	list-style-type:none;
+.title {
+    color:#333333;
+    font-weight:bold;
+    margin-bottom:2em;
 }
 
-.list {
-	line-height:160%;
+    .site .title a {
+        color:#333333;
+        text-decoration:none;
+    }
+
+    .site .title a:hover {
+        opacity:60%;
+    }
+
+    .site .meta {
+        color:#333333;
+    }
+
+    .site .footer {
+        font-size:80%;
+        color:#999999;
+        border-top:2px solid #999999;
+        margin-top:2em;
+        overflow:hidden;
+    }
+
+        .site .footer .contact {
+            float:left;
+            margin-right:3em;
+        }
+
+            .site .footer .contact a {
+                color:#999999;
+                text-decoration:none;
+            }
+
+
+/* Posts */
+#post {
+
 }
 
-.section {
-	margin-top:4%;
-	padding-top:4%
+    #post pre {
+        border:1px solid #999999;
+        background-color:#F9F9F9;
+        padding:0 0.4em;
+    }
+
+    #post ul, #post ol {
+        margin-left:1.35em;
+    }
+
+    #post code {
+        border:1px solid #999999;
+        background-color:#F9F9F9;
+        font-size:85%;
+        padding:0 0.2em;
+    }
+
+        #post pre code {
+            border:none;
+        }
+
+    #post pre.terminal {
+        border:1px solid #333333;
+        background-color:#333333;
+        color:#F9F9F9;
+    }
+
+    #post pre.terminal code {
+        background-color:#333333;
+    }
+
+#related {
+    margin-top:2em;
 }
 
-.bottom {
-	margin-top:8%;
-	padding-top:8%;
-	margin-bottom:8%;
-	padding-bottom:8%;
-}
+    #related h2 {
+        margin-bottom:1em;
+    }
