--- a/assets/style.css
+++ b/assets/style.css
@@ -27,6 +27,8 @@ body {
     font-size:13.34px;
     *font-size:small;
     text-align:center;
+    width:50vw;
+    margin:0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
