--- a/assets/style.css
+++ b/assets/style.css
@@ -27,8 +27,6 @@ body {
     font-size:13.34px;
     *font-size:small;
     text-align:center;
-    width:50vw;
-    margin:0 auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -82,7 +80,7 @@ ul.posts {
 .site {
     font-size:110%;
     text-align:justify;
-    width:40em;
+    width:50%;
     margin:3em auto 2em auto;
     line-height:1.5em;
 }
