--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,8 @@
             <span style="float:right;">
                 <a href="https://digitalbeacon.co/report/calebjolliffe-co" target="_blank">CO2: 0.000g</a>
             </span>
+            <br>
+            An independent designer building ridiculously simple tools for the Internet.
         </div>
 
         {{ content }}
