--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,13 @@
 @font-face {
 	font-family:'Berkeley Mono';
     font-weight:normal;
-	src:url('/fonts/bm-regular.woff2') format('woff2');
+	src:url('/assets/fonts/bm-regular.woff2') format('woff2');
 }
 
 @font-face {
     font-family:'Berkeley Mono';
     font-weight:bold;
-    src:url('/fonts/bm-bold.woff2') format('woff2');
+    src:url('/assets/fonts/bm-bold.woff2') format('woff2');
 }
 
 /* Globals */
@@ -24,7 +24,7 @@ body {
     background-color:#F9F9F9;
     color:#333333;
     font-family:'Berkeley Mono', Menlo, Monaco, monospace;
-    font-size:13.34px;
+    font-size:12px;
     *font-size:small;
     text-align:center;
 }
@@ -72,13 +72,13 @@ ul.posts {
 
     ul.posts span {
         color:#999999;
-        font-size:80%;
+        font-size:100%;
     }
 
 
 /* Main */
 .site {
-    font-size:110%;
+    font-size:100%;
     text-align:justify;
     width:40em;
     margin:3em auto 2em auto;
@@ -105,16 +105,16 @@ ul.posts {
     }
 
     .site .footer {
-        font-size:80%;
+        font-size:100%;
         color:#999999;
-        border-top:2px solid #999999;
+        border-top:1px solid #232323;
         margin-top:2em;
         overflow:hidden;
     }
 
         .site .footer .contact {
             float:left;
-            margin-right:3em;
+            margin-right:4em;
         }
 
             .site .footer .contact a {
