Update layout for bio

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     <div class="site">
         <div class="title">
             <span>
-                <a href="/">Caleb Jolliffe</a>
+                <a href="/"><b>Caleb Jolliffe</b></a>
             </span>
             <span style="float:right;">
                 <a href="https://digitalbeacon.co/report/calebjolliffe-co" target="_blank">CO2: 0.000g</a>
