--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,10 +34,10 @@
                 <a href="/"><b>Caleb Jolliffe</b></a>
             </span>
             <span style="float:right;">
-                <a href="https://digitalbeacon.co/report/calebjolliffe-co" target="_blank">CO2: 0.000g</a>
+                <a href="https://digitalbeacon.co/report/calebjolliffe-co" target="_blank"><b>CO2: 0.000g</b></a>
             </span>
             <br>
-            An independent designer building ridiculously simple tools for the Internet.
+            An independent designer building ridiculously<br>simple tools for the Internet.
         </div>
 
         {{ content }}
