--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,9 +50,9 @@
                 </p>
             </div>
             <div class="contact">
-                <p>
+                <p style="float:right;">
                     Get updates by <a href="">email</a>, <a href="">RSS</a>, or on <a href="https://x.com/calebjolliffe">X</a>.<br>
-                    Also consider <a href="">supporting my work</a>.
+                    Also consider <a href="https://ko-fi.com/calebjolliffe" target="_blank">supporting my work</a>.
                 </p>
             </div>
         </div>
