Create test RSS feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,8 @@
             </div>
             <div class="contact">
                 <p>
-                    Get updates by <a href="">email</a>, <a href="">RSS</a>, or on <a href="https://x.com/calebjolliffe">X</a>.<br>
-                    Also consider <a href="https://ko-fi.com/calebjolliffe" target="_blank">supporting my work</a>.
+                    Get updates by <a href="">email</a>, <a href="">RSS</a>, or on <a href="https://x.com/calebjolliffe">X</a><br>
+                    Also consider <a href="https://ko-fi.com/calebjolliffe" target="_blank">supporting my work</a>
                 </p>
             </div>
         </div>
