Update RSS link in default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,7 @@
     <link rel="canonical" href="https://calebjolliffe.co">
 	<link rel="icon" href="/assets/images/clbrrn.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="/assets/style.css" type="text/css">
-	<link rel="alternate" href="/assets/feed.xml" type="application/atom+rss" title="Caleb Jolliffe">
-	<link rel="alternate" href="/assets/feed.json" type="application/feed+json" title="Caleb Jolliffe">
+	<link rel="alternate" href="/rss/" type="application/atom+rss" title="Caleb Jolliffe">
 </head>
 
 <body>
